--- a/styledash.css
+++ b/styledash.css
@@ -520,7 +520,7 @@ input {
 /* ****************NOTESS*********** */
 .note-card {
   width: 330px;
-  height: 300px;
+  height: fit-content;
 }
 
 .note-card {
@@ -531,10 +531,11 @@ input {
 }
 
 .note-cards {
+  max-width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 40px;
+  gap: 30px;
   flex-wrap: wrap;
   margin: 60px 80px;
 }
