--- a/styledash.css
+++ b/styledash.css
@@ -417,6 +417,7 @@ input {
   padding: 5px;
   margin-left: 17px;
   font-size: 25px;
+  max-width: 970px;
   color: var(--task_description);
 }
 
@@ -524,7 +525,7 @@ input {
 }
 
 .note-card {
-  margin-top: 50px;
+  margin-top: 10px;
   background-color: white;
   border-radius: 12px;
   padding: 15px;
@@ -535,9 +536,9 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 30px;
+  gap: 15px;
   flex-wrap: wrap;
-  margin: 60px 80px;
+  margin: 30px 80px;
 }
 
 .note-name {
