--- a/styledash.css
+++ b/styledash.css
@@ -57,8 +57,8 @@ header {
 
 nav {
   background: var(--maincolor);
-  height: 100vh;
-  width: 255px;
+  height: 102vh;
+  width: 270px;
   display: sticky;
   left: 0;
   top: 0;
@@ -69,6 +69,7 @@ nav {
 
 li {
   list-style: none;
+  list-style-position: inside;
 }
 
 ul {
@@ -78,6 +79,7 @@ ul {
 .logo {
   text-align: center;
   display: flex;
+
   margin-top: 0 0 0 10px;
 
   padding-bottom: 3rem;
@@ -99,7 +101,6 @@ ul {
 }
 
 a {
-  position: relative;
   width: 280px;
   font-weight: bold;
   font-size: 16px;
@@ -135,7 +136,7 @@ a:hover {
 }
 
 .logout-div {
-  bottom: 0;
+  bottom: 100px;
   align-items: center;
   display: flex;
 
@@ -152,24 +153,70 @@ a:hover {
   margin-top: 30px;
   background-color: var(--dashboard);
   position: absolute;
-  top: 0;
+  top: 20px;
+
   overflow-x: scroll;
 }
 
 /*************** for create-task********************* */
 
-.createtask-form {
-  max-width: 400px;
-  text-align: center;
-  padding: 30px;
-  margin-top: 50px;
-  margin-left: 30px;
-  text-align: left;
-  background-color: var(--forms);
-  border-radius: 5px;
+.create_form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.form-group {
+form {
+  padding: 30px;
+  max-width: 90%;
+  width: 800px;
+}
+
+.input-group {
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.create_form input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  outline: 0;
+  border: 1px solid #fff;
+  color: #001c30;
+  font-size: 15px;
+  border-radius: 12px;
+}
+
+.create_form textarea {
+  height: 200px;
+}
+.create_form label {
+  height: 100%;
+  font-size: 19px;
+  padding: 10px;
+  cursor: text;
+}
+.create_form select {
+  border-radius: 12px;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+}
+#myInputField {
+  width: 40px;
+  background-color: grey;
+}
+
+.create_employe {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+/* .form-group {
   margin-bottom: 20px;
 }
 
@@ -179,13 +226,13 @@ label {
   font-size: 14px;
   font-weight: bold;
   color: #f2f2f2;
-}
-
+} */
+/*
 input {
   margin-bottom: 10px;
-}
+} */
 
-.form-group input[type="text"],
+/* .form-group input[type="text"],
 .form-group select,
 .form-group input[type="date"],
 .form-group textarea {
@@ -197,8 +244,8 @@ input {
   color: black;
   font-size: 14px;
   color: #ddd;
-}
-
+} */
+/*
 .form-group input[type="text.title"] {
   color: black;
   width: 100%;
@@ -207,12 +254,7 @@ input {
   border-radius: 4px;
   color: black;
   font-size: 14px;
-}
-
-.dateee {
-  display: flex;
-  justify-content: space-between;
-}
+} */
 
 .textareaa {
   margin-bottom: 20px;
