--- a/styledash.css
+++ b/styledash.css
@@ -73,8 +73,9 @@ ul {
 }
 
 .logo {
-  text-align: center;
   display: flex;
+  justify-content: left;
+  align-items: center;
 
   margin-top: 0 0 0 10px;
 
@@ -94,6 +95,9 @@ ul {
   padding-left: 15px;
   font-size: 35px;
   text-transform: uppercase;
+}
+.MANAGER {
+  font-size: ;
 }
 
 a {
@@ -533,16 +537,16 @@ textarea {
 }
 
 .note-card {
-  margin-top: 10px;
+  margin-top: 5px;
   background-color: var(--note-card);
   border-radius: 12px;
-  padding: 15px;
+  padding: 10px;
 }
 
 .note-cards {
-  max-width: 80%;
+  max-width: 90%;
   display: flex;
-  justify-content: space-between;
+
   align-items: center;
   gap: 15px;
   flex-wrap: wrap;
