--- a/styledash.css
+++ b/styledash.css
@@ -130,23 +130,35 @@ a:hover {
   transition: 0.5s;
 }
 
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .logout {
-  color: #ffcf70;
-  margin-bottom: 22px;
+  color: var(--dashboard);
+  margin-bottom: 10px;
+  margin-right: 10px;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.logt form {
-  background-color: var(--navbar);
+.logout:hover {
+  color: blue;
+  cursor: pointer;
 }
 
-.logout-div {
+/* .logout-div {
   bottom: 100px;
   align-items: center;
   display: flex;
 
   align-items: center;
   margin-top: 100px;
-}
+} */
 
 /* for container */
 
