--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   width: 50%;
   display: flex;
   justify-content: center;
-  /* align-self: flex-end; */
+
   margin-top: 50px;
 }
 
@@ -97,16 +97,17 @@ body {
   padding: 20px;
 }
 
-h2 {
+h1 {
   text-align: center;
   margin-bottom: 10px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: #ffcf70;
+  font-size: 30px;
 }
-
+/*
 .input-group {
-  margin-bottom: 10px;
-}
+  margin-bottom: 15px;
+} */
 
 .input-group label {
   display: block;
@@ -120,8 +121,32 @@ h2 {
   border-radius: 20px;
   font-size: 16px;
 }
+
+/* ************** */
+
+.error {
+  display: block;
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.input-group {
+  margin-bottom: 10px;
+}
+
+.login-form {
+  padding: 20px;
+}
+
+/* ************** */
+
 label {
   color: #ccc;
+}
+
+.main-right form {
+  width: 300px;
 }
 
 .input-group button {
@@ -134,7 +159,6 @@ label {
   border-radius: 15px;
   font-size: 15px;
   cursor: pointer;
-  /* font-size: 11px; */
 }
 
 .input-group button:hover {
@@ -143,5 +167,3 @@ label {
 }
 
 /* **********************NOTES************************************* */
-
-
