--- a/styledash.css
+++ b/styledash.css
@@ -592,7 +592,7 @@ textarea {
 /* ****************NOTESS*********** */
 
 .note-card {
-  flex: 1 0 330px; /* flex-grow: 1; flex-shrink: 0; flex-basis: 330px; */
+  flex: 1 0 330px;
   background-color: var(--note-card);
   border-radius: 12px;
   width: 40%;
@@ -606,8 +606,8 @@ textarea {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start; /* Change to flex-start to stack cards from the left */
-  align-items: flex-start; /* Change to flex-start to align cards from the top */
+  justify-content: flex-start;
+  align-items: flex-start;
   margin: 30px 80px;
 }
 
