--- a/styledash.css
+++ b/styledash.css
@@ -523,9 +523,9 @@ textarea {
 /********************** Table  ************************/
 
 .usertable {
-  max-width: 1200px;
+  max-width: 100vw;
   margin-top: 50px;
-  margin-left: 30px;
+
   border-radius: 12px;
   padding: 20px;
   background-color: var(--forms);
@@ -546,6 +546,10 @@ textarea {
   border-bottom: 1px solid #ddd;
 }
 
+.userdelet {
+  width: 5px;
+}
+
 .table th {
   background-color: var(--table_header);
   color: #333;
@@ -556,38 +560,23 @@ textarea {
   background-color: #f2f2f2;
 }
 
-.curve th:first-child {
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-
-.curve th:last-child {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-
 .table td button {
-  padding: 5px 10px;
   border: none;
-  border-radius: 3px;
+  background: transparent;
+  /* background-color: var(--forms); */
   cursor: pointer;
-  background-color: #46458c;
-}
-
-.table td .btn-primary {
-  background-color: #007bff;
-  color: #fff;
-}
-
-.table td .btn-danger {
-  background-color: #dc3545;
-  color: #fff;
+  width: 10px;
+  color: red;
 }
 
 .table td a {
   text-decoration: none;
   color: inherit;
 }
+/*
+.btn-danger {
+  width: 10px;
+} */
 
 /* ****************NOTESS*********** */
 
@@ -600,6 +589,7 @@ textarea {
   height: fit-content;
   padding: 10px;
   margin: 5px;
+  top: 0;
 }
 
 .note-cards {
@@ -703,7 +693,7 @@ textarea {
 
 .bottom-dash {
   margin-top: 20px;
-  height: 470px;
+  max-height: 100vh;
   width: 98%;
   display: flex;
 
