--- a/styledash.css
+++ b/styledash.css
@@ -705,7 +705,7 @@ textarea {
 
 .dashbottom {
   width: 98%;
-  height: 120px;
+  max-height: 100%;
   background-color: var(--forms);
   margin: auto;
   margin-top: 8px;
