--- a/styledash.css
+++ b/styledash.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   font-family: "Noto Sans JP", sans-serif;
 }
+a{
+  cursor: pointer;
+}
 
 html {
   scroll-behavior: smooth;
