--- a/styledash.css
+++ b/styledash.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-family: "Noto Sans JP", sans-serif;
 }
-a{
+a {
   cursor: pointer;
 }
 
@@ -16,18 +16,24 @@ html {
   scroll-behavior: smooth;
 }
 
+.background {
+  background: rgba(0, 0, 0, 0.7) url("images/bg1.png");
+  background-size: cover;
+  background-blend-mode: normal;
+}
+
 :root {
   --navbar: #48466d;
   --dashboard: #3d84a8;
   --forms: #46cdcf;
   --dashboard-cards: #abedd8;
-  --note-card: #ff9292;
+  --note-card: #caffbf;
   --inputcolor: var(--dashboard);
   --anchortag: #fff; /*ffcf70 */
 
-  --priority_high: #eb455f;
-  --priority_medium: #ea906c;
-  --priority_low: #fae392;
+  --priority_high: #cd5c5c;
+  --priority_medium: #87cefa;
+  --priority_low: #fff8dc;
   --priority_all: #ffffff;
   --task_description: #862b0d;
 
@@ -137,7 +143,6 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
 }
 
 .logout {
@@ -493,7 +498,7 @@ textarea {
 .task-description {
   padding: 5px;
   margin-left: 17px;
-  font-size: px;
+  font-size: 22px;
   max-width: 970px;
   color: var(--task_description);
 }
@@ -730,7 +735,6 @@ textarea {
 }
 
 .logo-slides {
- 
   margin: auto;
   width: 1200px;
   animation: slide 5s infinite linear;
