--- a/styledash.css
+++ b/styledash.css
@@ -86,8 +86,8 @@ ul {
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+  align-items: left;
 }
 
 .logo {
@@ -122,7 +122,7 @@ a {
 .link-list {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+
   align-items: center;
   gap: 3px;
 }
