--- a/styledash.css
+++ b/styledash.css
@@ -86,7 +86,6 @@ ul {
   width: auto;
   display: flex;
   flex-direction: column;
-
   align-items: left;
 }
 
@@ -145,7 +144,7 @@ a:hover {
 
 .logout {
   color: var(--dashboard);
-  margin-bottom: 10px;
+
   margin-right: 10px;
   background: transparent;
   display: flex;
@@ -598,10 +597,12 @@ textarea {
   height: fit-content;
   padding: 10px;
   margin: 5px;
+  margin-top: 40px;
 }
 
 .note-cards {
   width: 80%;
+  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
